--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,6 +3,8 @@
 <ul>
 <% @tasks.each do |task|%>
     <li><%= task.title%>-<%=task.description%> 
+    <%= link_to 'show', task_path(task) %>
+    <%= link_to 'edit', edit_task_path(task) %>
     <%= link_to 'destroy', task, method: 'delete', data: {confirm: "Are you sure?"}%>
     </li>
 
